--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   stacked_services: ^1.1.0
   flutter_dotenv: ^5.2.1
   json_annotation: ^4.9.0
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -23,7 +25,10 @@ dev_dependencies:
   mockito: ^5.4.1
   stacked_generator: ^1.3.3
   json_serializable: ^6.8.0
+  hive_test: ^1.0.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
 
