--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   json_annotation: ^4.9.0
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -26,9 +27,15 @@ dev_dependencies:
   stacked_generator: ^1.3.3
   json_serializable: ^6.8.0
   hive_test: ^1.0.1
+  intl_utils: ^2.8.2
 
 flutter:
   uses-material-design: true
   assets:
     - .env
+
+flutter_intl:
+  enabled: false
+  class_name: AppLocalizations
+  main_locale: en 
 
