--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   intl: ^0.19.0
+  device_preview: ^1.2.0
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -33,6 +34,54 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+  
+  fonts:
+  - family: DMSans
+    fonts:
+      - asset: assets/fonts/DMSans-Black.ttf
+        weight: 900
+      - asset: assets/fonts/DMSans-BlackItalic.ttf
+        weight: 900
+        style: italic
+      - asset: assets/fonts/DMSans-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/DMSans-BoldItalic.ttf
+        weight: 700
+        style: italic
+      - asset: assets/fonts/DMSans-ExtraBold.ttf
+        weight: 800
+      - asset: assets/fonts/DMSans-ExtraBoldItalic.ttf
+        weight: 800
+        style: italic
+      - asset: assets/fonts/DMSans-ExtraLight.ttf
+        weight: 200
+      - asset: assets/fonts/DMSans-ExtraLightItalic.ttf
+        weight: 200
+        style: italic
+      - asset: assets/fonts/DMSans-Italic.ttf
+        style: italic
+      - asset: assets/fonts/DMSans-Light.ttf
+        weight: 300
+      - asset: assets/fonts/DMSans-LightItalic.ttf
+        weight: 300
+        style: italic
+      - asset: assets/fonts/DMSans-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/DMSans-MediumItalic.ttf
+        weight: 500
+        style: italic
+      - asset: assets/fonts/DMSans-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/DMSans-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/DMSans-SemiBoldItalic.ttf
+        weight: 600
+        style: italic
+      - asset: assets/fonts/DMSans-Thin.ttf
+        weight: 100
+      - asset: assets/fonts/DMSans-ThinItalic.ttf
+        weight: 100
+        style: italic
 
 flutter_intl:
   enabled: false
