--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive_generator: ^2.0.1
   intl: ^0.19.0
   device_preview: ^1.2.0
+  flutter_svg: ^2.0.11
 
 dev_dependencies:
   build_runner: ^2.4.5
