--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/fonts/
+    - assets/images/
+    - assets/icons/
   
   fonts:
   - family: DMSans
