--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ dependencies:
   intl: ^0.19.0
   device_preview: ^1.2.0
   flutter_svg: ^2.0.11
+  cached_network_image: ^3.4.1
+  shimmer: ^3.0.0
+  flutter_keyboard_visibility: ^6.0.0 
+  image_picker: ^1.1.2
+  firebase_core: ^3.6.0
+  firebase_storage: ^12.3.4
+  firebase_core_platform_interface: ^5.3.0
 
 dev_dependencies:
   build_runner: ^2.4.5
